--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -5,7 +5,7 @@ One of the main goals of Quarkus is ease of extensibility and to build a vibrant
 
 Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a framework or technology into your Quarkus application. They also do all of the heavy lifting of providing the right information to GraalVM for your application to compile natively.
 
-Quarkus aims to provide a support for a full https://quarkus.io/extensions/[extension ecosystem], to make it easy to discover and consume 3rd party extensions, as well as providing easier version management.
+Quarkus aims to provide a support for a full https://quarkus.io/extensions/[extension ecosystem,target=_blank], to make it easy to discover and consume 3rd party extensions, as well as providing easier version management.
 
 == List extensions
 
@@ -80,7 +80,7 @@ Quarkus extensions add a new developer focused behavior to the core offering, an
 
 This means that metadata is only processed once at build time, which both saves on startup time, and also on memory usage as the classes etc that are used for processing are not loaded (or even present) in the runtime JVM.
 
-Writing a Quarkus extension is beyond the scope of this lab, so consult the https://quarkus.io/guides/extension-authors-guide[Extension Author's Guide] for more detail on writing your own extension.
+Writing a Quarkus extension is beyond the scope of this lab, so consult the https://quarkus.io/guides/extension-authors-guide[Extension Author's Guide,target=_blank] for more detail on writing your own extension.
 
 == Congratulations
 
