--- a/docs/testing.adoc
+++ b/docs/testing.adoc
@@ -141,7 +141,7 @@ public class StaticContentTest {
 }
 ----
 
-You'll need to _Assistant -> Optimize Imports_ to import the right classes. In the dialog box, pick the appropriate class to import, clicking _Next >_ until you've eliminated all the ambiguities, and click _Finish_. In particular, be sure to import `java.io.InputStream`, `java.io.ByteArrayOutputStream`, and `java.net.URL`.
+You'll need to _Assistant -> Organize Imports_ to import the right classes. In the dialog box, pick the appropriate class to import, clicking _Next >_ until you've eliminated all the ambiguities, and click _Finish_. In particular, be sure to import `java.io.InputStream`, `java.io.ByteArrayOutputStream`, and `java.net.URL`.
 
 The `@TestHTTPResource` annotation allows you to directly inject the URL of the Quarkus instance, the value of the annotation will be the path component of the URL. For now `@TestHTTPResource` allows you to inject URI, URL and String representations of the URL.
 
@@ -264,7 +264,7 @@ Now modify our existing `GreetingServiceTest` class to add a log statement showi
     }
 ----
 
-Basically we've added a new `LOGGER.info` line. Don't forget to _Assistant > Optimize Imports_ to fix any needed imports (be sure to import `org.slf4j.Logger` and `org.slf4j.LoggerFactory`).
+Basically we've added a new `LOGGER.info` line. Don't forget to _Assistant > Organize Imports_ to fix any needed imports (be sure to import `org.slf4j.Logger` and `org.slf4j.LoggerFactory`).
 
 Now run the tests again (using the command palette as usual), and watch the output closely - you will see:
 
@@ -278,6 +278,6 @@ This confirms that our `MockGreetingService` is being used instead of the origin
 
 == Congratulations!
 
-In this section we covered basic testing of Quarkus Apps using the `@QuarkusTest` and supporting annotations. This is an important part of any software engineering project and with Quarkus, testing has never been easier. For more information on testing with Quarkus, be sure to review the https://quarkus.io/guides/getting-started-testing[Quarkus Testing Guide].
+In this section we covered basic testing of Quarkus Apps using the `@QuarkusTest` and supporting annotations. This is an important part of any software engineering project and with Quarkus, testing has never been easier. For more information on testing with Quarkus, be sure to review the https://quarkus.io/guides/getting-started-testing[Quarkus Testing Guide,target=_blank].
 
 In the next section we'll talk about how to effectively debug Quarkus applications. On with the show!
