--- a/docs/cloudnative.adoc
+++ b/docs/cloudnative.adoc
@@ -14,9 +14,9 @@ There are of course a category of issues that can't be resolved by restarting th
 
 === Add Extension
 
-Let's build a simple REST application endpoint exposes https://microprofile.io[MicroProfile,target=_blank] Health checks at the `/health` endpoint according to the specification. It will also provide several other REST endpoints to allow us to dynamically query the health of our Quarkus application.
+Let's build a simple REST application endpoint exposes https://microprofile.io[MicroProfile,window=_blank] Health checks at the `/health` endpoint according to the specification. It will also provide several other REST endpoints to allow us to dynamically query the health of our Quarkus application.
 
-We'll need to add a https://quarkus.io/extensions[Quarkus Extension,target=_blank] to enable this feature in our app. Fortunately, adding a Quarkus extension is super easy. We'll cover extensions in more depth in other sections of this workshop but for now, open a Terminal and execute the following command to add the extension to our project's `pom.xml`:
+We'll need to add a https://quarkus.io/extensions[Quarkus Extension,window=_blank] to enable this feature in our app. Fortunately, adding a Quarkus extension is super easy. We'll cover extensions in more depth in other sections of this workshop but for now, open a Terminal and execute the following command to add the extension to our project's `pom.xml`:
 
 [source, sh, role="copypaste"]
 ----
@@ -254,7 +254,7 @@ Later, when we deploy this to our Kubernetes cluster, we'll configure it to use 
 
 Hardcoded values in your code is a no go (even if we all did it at some point ;-)). In this step, we learn how to configure your application to externalize configuration.
 
-Quarkus uses https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config,target=_blank] to inject the configuration into the application. The injection uses the `@ConfigProperty` annotation, for example:
+Quarkus uses https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config,window=_blank] to inject the configuration into the application. The injection uses the `@ConfigProperty` annotation, for example:
 
 [source, java]
 ----
@@ -264,7 +264,7 @@ String message;
 
 [NOTE]
 ====
-When injecting a configured value, you can use `@Inject @ConfigProperty` or just `@ConfigProperty`. The `@Inject` annotation is not necessary for members annotated with `@ConfigProperty`, a behavior which differs from https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config,target=_blank].
+When injecting a configured value, you can use `@Inject @ConfigProperty` or just `@ConfigProperty`. The `@Inject` annotation is not necessary for members annotated with `@ConfigProperty`, a behavior which differs from https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config,window=_blank].
 ====
 
 === Add some external config
@@ -376,7 +376,7 @@ You can override these runtime properties with the following mechanisms (in decr
 
 [NOTE]
 ====
-Environment variables names are following the conversion rules of https://github.com/eclipse/microprofile-config/blob/master/spec/src/main/asciidoc/configsources.asciidoc#default-configsources[Eclipse MicroProfile Config sources,target=_blank]
+Environment variables names are following the conversion rules of https://github.com/eclipse/microprofile-config/blob/master/spec/src/main/asciidoc/configsources.asciidoc#default-configsources[Eclipse MicroProfile Config sources,window=_blank]
 ====
 
 === Configuration Profiles
@@ -443,7 +443,7 @@ What did you get? You should get `hello production quarkus!` indicating that the
 
 [NOTE]
 ====
-In this example we read configuration properties from `application.properties`. You can also introduce custom configuration sources in the standard MicroProfile Config manner. To do this, you must provide a class which implements either `org.eclipse.microprofile.config.spi.ConfigSource` or `org.eclipse.microprofile.config.spi.ConfigSourceProvider`. Create a service file for the class and it will be detected and installed at application startup. https://microprofile.io/project/eclipse/microprofile-config[More Info,target=_blank]. This would be useful, for example, to read directly from **Kubernetes ConfigMap**s.
+In this example we read configuration properties from `application.properties`. You can also introduce custom configuration sources in the standard MicroProfile Config manner. To do this, you must provide a class which implements either `org.eclipse.microprofile.config.spi.ConfigSource` or `org.eclipse.microprofile.config.spi.ConfigSourceProvider`. Create a service file for the class and it will be detected and installed at application startup. https://microprofile.io/project/eclipse/microprofile-config[More Info,window=_blank]. This would be useful, for example, to read directly from **Kubernetes ConfigMap**s.
 ====
 
 == Cleanup
