--- a/docs/testing.adoc
+++ b/docs/testing.adoc
@@ -278,6 +278,6 @@ This confirms that our `MockGreetingService` is being used instead of the origin
 
 == Congratulations!
 
-In this section we covered basic testing of Quarkus Apps using the `@QuarkusTest` and supporting annotations. This is an important part of any software engineering project and with Quarkus, testing has never been easier. For more information on testing with Quarkus, be sure to review the https://quarkus.io/guides/getting-started-testing[Quarkus Testing Guide,target=_blank].
+In this section we covered basic testing of Quarkus Apps using the `@QuarkusTest` and supporting annotations. This is an important part of any software engineering project and with Quarkus, testing has never been easier. For more information on testing with Quarkus, be sure to review the https://quarkus.io/guides/getting-started-testing[Quarkus Testing Guide,window=_blank].
 
 In the next section we'll talk about how to effectively debug Quarkus applications. On with the show!
